# CeVIO_AI_on_Wine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  d3d9_cevioaihook.sln  exportgen.py
d3d9_cevioaihook/: base64.h  cpp.hint  d3d9_cevioaihook.vcxproj  d3d9_cevioaihook.vcxproj.filters  dllmain.cpp  ex.cpp  ex.h  llist.cpp  llist.h  util.cpp  util.h  wmi.cpp  wmi.h
dump/: CMakeLists.txt  base64.cpp  dump.cpp  dump.vcxproj  dump.vcxproj.filters  main.cpp
hook/: CMakeLists.txt
hook/src/: debug.c  debug.h  dllmain.c  dllmain.def  hooks.c  hooks.h  misc.c  misc.h
hook/src/wmi/: wminet.c  wminet.cpp  wminet.h  wminet.hpp  wminet_c.h
hook/src/wmi/com/: wbem.cpp  wbem.hpp  wbem_client.cpp  wbem_client.hpp  wbem_proxy.cpp  wbem_proxy.hpp
injector/: injector.cpp  injector.vcxproj
misc/: imm32_native.reg  minhook_cmake_patch.diff  setup.reg
